[project]
name = "uniaf3"
version = "0.1.0"
description = "Unified data processing for AlphaFold3-like models"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yi Zhou", email = "me@y1zhou.com" }]
dependencies = [
    "gemmi>=0.7.4",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "typer>=0.21.1",
]

[project.urls]
homepage = "https://github.com/y1zhou/uniaf3"
issues = "https://github.com/y1zhou/uniaf3/issues"
